--- a/src/TipCalc.form
+++ b/src/TipCalc.form
@@ -86,7 +86,7 @@
           <grid row="2" column="8" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Tip"/>
+          <text value="Tip per person"/>
         </properties>
       </component>
       <component id="1687c" class="javax.swing.JButton" binding="LessTip">
@@ -104,7 +104,7 @@
           </grid>
         </constraints>
         <properties>
-          <text value="15%"/>
+          <text value="15"/>
         </properties>
       </component>
       <component id="c13fe" class="javax.swing.JLabel" binding="NumOfPeople">
